--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.9.3",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "chart.js": "^4.4.4",
     "firebase": "^10.13.2",
+    "framer-motion": "^11.9.0",
     "next": "14.2.13",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
